# reason

./: Cargo.toml
examples/: chat.rs  mcp.rs
src/: error.rs  lib.rs  tool.rs
